chainsight-cdk-macros/src/snapshots/chainsight_cdk_macros__storages__test__snapshot__generate_queries_for_key_value_store_struct_internal.snap
---
source: chainsight-cdk-macros/src/storages.rs
expression: formatted
---
#[ic_cdk::query]
#[candid::candid_method(query)]
fn get_account(id: u64) -> Option<Account> {
    _get_account(id)
}
fn _get_account(id: u64) -> Option<Account> {
    Account::get(id)
}
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn proxy_get_account(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProvider::<u64, Option<Account>>::new(proxy(), _get_account)
        .reply(input)
        .await
}
#[ic_cdk::query]
#[candid::candid_method(query)]
fn between_account(a: (u64, u64)) -> Vec<(u64, Account)> {
    _between_account(a)
}
fn _between_account(a: (u64, u64)) -> Vec<(u64, Account)> {
    Account::between(a.0, a.1)
}
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn proxy_between_account(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProvider::<(u64, u64), Vec<(u64, Account)>>::new(
        proxy(),
        _between_account,
    )
    .reply(input)
    .await
}
#[ic_cdk::query]
#[candid::candid_method(query)]
fn last_account(n: u64) -> Vec<(u64, Account)> {
    _last_account(n)
}
fn _last_account(n: u64) -> Vec<(u64, Account)> {
    Account::last(n)
}
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn proxy_last_account(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProvider::<u64, Vec<(u64, Account)>>::new(proxy(), _last_account)
        .reply(input)
        .await
}

