chainsight-cdk-macros/src/snapshots/chainsight_cdk_macros__storages__test__snapshot__generate_queries_for_key_values_store_struct_internal.snap
---
source: chainsight-cdk-macros/src/storages.rs
assertion_line: 669
expression: formatted
---
#[ic_cdk::query]
#[candid::candid_method(query)]
fn get_account(id: String) -> Vec<Account> {
    _get_account(id)
}
fn _get_account(id: String) -> Vec<Account> {
    Account::get(id.as_str())
}
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn proxy_get_account(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProvider::<String, Vec<Account>>::new(proxy(), _get_account)
        .reply(input)
        .await
}
#[ic_cdk::query]
#[candid::candid_method(query)]
fn between_account(a: (String, String)) -> HashMap<String, Vec<Account>> {
    _between_account(a)
}
fn _between_account(a: (String, String)) -> HashMap<String, Vec<Account>> {
    Account::between(a.0.as_str(), a.1.as_str())
}
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn proxy_between_account(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProvider::<(String, String), HashMap<String, Vec<Account>>>::new(
        proxy(),
        _between_account,
    )
    .reply(input)
    .await
}
#[ic_cdk::query]
#[candid::candid_method(query)]
fn last_account(n: u64) -> HashMap<String, Vec<Account>> {
    _last_account(n)
}
fn _last_account(n: u64) -> HashMap<String, Vec<Account>> {
    Account::last(n)
}
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn proxy_last_account(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProvider::<u64, HashMap<String, Vec<Account>>>::new(
        proxy(),
        _last_account,
    )
    .reply(input)
    .await
}

