chainsight-cdk-macros/src/snapshots/chainsight_cdk_macros__storages__test__snapshot__key_value_store_derive.snap
---
source: chainsight-cdk-macros/src/storages.rs
expression: formatted
---
impl Account {
    pub fn get(id: u64) -> Option<Self> {
        Self::get_store().get(id)
    }
    pub fn put(&self, id: u64) {
        Self::get_store().set(id, self.clone())
    }
    pub fn between(from: u64, to: u64) -> Vec<(u64, Self)> {
        Self::get_store().between(from, to)
    }
    pub fn last(n: u64) -> Vec<(u64, Self)> {
        Self::get_store().last(n)
    }
    fn get_store() -> chainsight_cdk::storage::KeyValueStore {
        chainsight_cdk::storage::KeyValueStore::new(1u8)
    }
}

