chainsight-cdk-macros/src/snapshots/chainsight_cdk_macros__storages__test__snapshot__prepare_stable_structure.snap
---
source: chainsight-cdk-macros/src/storages.rs
expression: formatted
---
type Memory =
    ic_stable_structures::memory_manager::VirtualMemory<ic_stable_structures::DefaultMemoryImpl>;
thread_local! { static MEMORY_MANAGER : std :: cell :: RefCell < ic_stable_structures :: memory_manager :: MemoryManager < ic_stable_structures :: DefaultMemoryImpl >> = std :: cell :: RefCell :: new (ic_stable_structures :: memory_manager :: MemoryManager :: init (ic_stable_structures :: DefaultMemoryImpl :: default ())) ; }

