chainsight-cdk-macros/src/snapshots/chainsight_cdk_macros__storages__test__snapshot__stable_memory_for_btree_map.snap
---
source: chainsight-cdk-macros/src/storages.rs
expression: formatted
---
thread_local! { static TIMESTAMPS : std :: cell :: RefCell < ic_stable_structures :: StableBTreeMap < u64 , u64 , MemoryType >> = std :: cell :: RefCell :: new (ic_stable_structures :: StableBTreeMap :: init (MEMORY_MANAGER . with (| mm | mm . borrow () . get (ic_stable_structures :: memory_manager :: MemoryId :: new (0u8))))) ; }
#[ic_cdk::query]
#[candid::candid_method(query)]
fn get_timestamps() -> Vec<u64> {
    _get_timestamps()
}
pub fn _get_timestamps() -> Vec<u64> {
    let data_len = _timestamps_len();
    if data_len > 0 {
        range_timestamp(0, data_len)
    } else {
        vec![]
    }
}
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn proxy_get_timestamps(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProviderWithoutArgs::<Vec<u64>>::new(proxy(), _get_timestamps)
        .reply(input)
        .await
}
#[ic_cdk::query]
#[candid::candid_method(query)]
fn timestamps_len() -> u64 {
    _timestamps_len()
}
pub fn _timestamps_len() -> u64 {
    TIMESTAMPS.with(|mem| mem.borrow().len())
}
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn proxy_timestamps_len(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProviderWithoutArgs::<u64>::new(proxy(), _timestamps_len)
        .reply(input)
        .await
}
#[ic_cdk::query]
#[candid::candid_method(query)]
fn get_last_timestamp() -> u64 {
    _get_last_timestamp()
}
pub fn _get_last_timestamp() -> u64 {
    TIMESTAMPS.with(|mem| {
        let (_, value) = mem.borrow().last_key_value().unwrap();
        value.clone()
    })
}
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn proxy_get_last_timestamp(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProviderWithoutArgs::<u64>::new(proxy(), _get_last_timestamp)
        .reply(input)
        .await
}
#[ic_cdk::query]
#[candid::candid_method(query)]
pub fn get_top_timestamps(n: u64) -> Vec<u64> {
    _get_top_timestamps(n)
}
pub fn _get_top_timestamps(n: u64) -> Vec<u64> {
    let data_len = _timestamps_len();
    if data_len == 0 {
        return vec![];
    }
    let from = if n > data_len { 0 } else { data_len - n };
    range_timestamp(from, data_len)
}
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn proxy_get_top_timestamps(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProvider::<u64, Vec<u64>>::new(proxy(), _get_top_timestamps)
        .reply(input)
        .await
}
#[ic_cdk::query]
#[candid::candid_method(query)]
fn get_timestamp(idx: u64) -> u64 {
    _get_timestamp(idx)
}
pub fn _get_timestamp(idx: u64) -> u64 {
    TIMESTAMPS.with(|mem| mem.borrow().get(&idx)).unwrap()
}
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn proxy_get_timestamp(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProvider::<u64, u64>::new(proxy(), _get_timestamp)
        .reply(input)
        .await
}
pub fn range_timestamp(from: u64, to: u64) -> Vec<u64> {
    TIMESTAMPS.with(|mem| {
        mem.borrow()
            .range(from..to)
            .into_iter()
            .map(|(_, v)| v)
            .collect()
    })
}
pub fn add_timestamp(value: u64) {
    add_timestamp_internal(value).unwrap()
}
pub fn add_timestamp_internal(value: u64) -> Result<(), String> {
    let new_key = _timestamps_len();
    TIMESTAMPS.with(|mem| mem.borrow_mut().insert(new_key, value));
    Ok(())
}

