chainsight-cdk-macros/src/snapshots/chainsight_cdk_macros__storages__test__snapshot__stable_memory_for_scalar.snap
---
source: chainsight-cdk-macros/src/storages.rs
expression: formatted
---
thread_local! { static TIMESTAMP : std :: cell :: RefCell < ic_stable_structures :: StableCell < u64 , MemoryType >> = std :: cell :: RefCell :: new (ic_stable_structures :: StableCell :: init (MEMORY_MANAGER . with (| mm | mm . borrow () . get (ic_stable_structures :: memory_manager :: MemoryId :: new (0u8))) , std :: default :: Default :: default ()) . unwrap ()) ; }
#[ic_cdk::query]
#[candid::candid_method(query)]
pub fn get_timestamp() -> u64 {
    TIMESTAMP.with(|cell| cell.borrow().get().clone())
}
pub fn set_timestamp(value: u64) -> Result<(), String> {
    let res = TIMESTAMP.with(|cell| cell.borrow_mut().set(value));
    res.map(|_| ()).map_err(|e| format!("{:?}", e))
}

